@@ -1,5 +1,13 @@
 2006-07-24 Braden McDaniel  <braden@endoframe.com>
 
+	Doc-comment improvements.
+
+	* src/libopenvrml/openvrml/exposedfield.cpp
+	* src/libopenvrml/openvrml/node.cpp
+	* src/libopenvrml/openvrml/node_impl_util.cpp
+
+2006-07-24 Braden McDaniel  <braden@endoframe.com>
+
 	* doc/doxygen-header: Style sheet updates for doxygen 1.4.7.
 
 2006-07-24 Braden McDaniel  <braden@endoframe.com>
